# SandboxGame

./: .gitignore  .gitmodules  CMakeLists.txt  EngineArchitecture.drawio  imgui.ini
Assets/Shaders/Sandbox/: Cube.frag.glsl  Debug.vert.glsl  HitBox.frag.glsl
Assets/Shaders/Test/: Skybox.frag.glsl
EngineLib/src/: Engine.hpp
EngineLib/src/Application/: Application.cpp  Application.hpp  ApplicationSpec.hpp  Predefines.hpp  Window.cpp  Window.hpp
EngineLib/src/Core/: Allocator.cpp  Allocator.hpp  Allocator.impl.hpp  CTypes.h  Core.hpp  Log.cpp  Log.hpp  Predefines.hpp  Ref.cpp  Ref.hpp  Ref.impl.hpp  Timer.hpp  Types.hpp
EngineLib/src/Core/STL/: CFilesystem.h  CMap.h  CPair.h  CStringView.h  CVector.h  Containers.hpp
EngineLib/src/Layer/: Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  LayerStack.impl
EngineLib/src/Reflection/: GLSLReflection.cpp  GLSLReflection.hpp
EngineLib/src/Renderer/: Camera.cpp  Camera.hpp  CubemapTexture.cpp  CubemapTexture.hpp  Framebuffer.cpp  Framebuffer.hpp  GraphicsContext.cpp  GraphicsContext.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  Loader.hpp  Predefines.hpp  Renderer.cpp  Renderer.hpp  Renderer.impl  RendererAPI.hpp  RendererCommand.hpp  RendererSpec.hpp  Shader.cpp  Shader.hpp  ShaderDataType.hpp  ShaderUniform.hpp  Skybox.cpp  Skybox.hpp  StorageBuffer.cpp  StorageBuffer.hpp  TextureArray.cpp  TextureArray.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp  Window.cpp  Window.hpp
EngineLib/src/Renderer/GUI/OpenGL/: GUIContext.cpp
EngineLib/src/Renderer/OpenGL/: Context.cpp  CubemapTexture.cpp  ExportedFunctions.hpp  Framebuffer.cpp  GUIContext.cpp  Image.cpp  IndexBuffer.cpp  IndirectDrawBuffer.cpp  OpenGLContext.cpp  OpenGLContext.hpp  OpenGLCubemapTexture.cpp  OpenGLCubemapTexture.hpp  OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLImage.cpp  OpenGLImage.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLSkybox.cpp  OpenGLSkybox.hpp  OpenGLStorageBuffer.cpp  OpenGLStorageBuffer.hpp  OpenGLTextureArray.cpp  OpenGLTextureArray.hpp  OpenGLVertexArray.cpp  OpenGLVertexArray.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp  Renderer.cpp  Shader.cpp  Skybox.cpp  StorageBuffer.cpp  StructDefinitions.hpp  TextureArray.cpp  VertexArray.cpp  VertexBuffer.cpp  (+1 more)
EngineLib/src/Renderer/Reflection/: GLSLReflection.cpp  GLSLReflection.hpp
EngineLib/src/Renderer/Shared/: Camera.cpp  Camera.hpp  CubemapTextureSpec.hpp  DepthFunction.hpp  Framebuffer.cpp  GraphicsContext.cpp  GraphicsContext.hpp  Image.hpp  ImageType.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RendererAPI.hpp  RendererCommand.hpp  RendererSpec.hpp  Shader.cpp  ShaderDataType.cpp  ShaderDataType.hpp  ShaderUniform.h  ShaderUniform.hpp  Skybox.hpp  StorageBufferType.hpp  TextureArray.cpp  Vertex.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp  Viewport.hpp  function_pointers.h
EngineLib/src/Renderer/Shared/APISpecific/: CubemapTexture.cpp  CubemapTexture.hpp  DrawIndirectBuffer.cpp  DrawIndirectBuffer.hpp  Framebuffer.cpp  Framebuffer.hpp  GUIContext.cpp  GUIContext.hpp  Image.cpp  Image.hpp  IndexBuffer.cpp  IndexBuffer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  Skybox.cpp  Skybox.hpp  StorageBuffer.cpp  StorageBuffer.hpp  TextureArray.cpp  TextureArray.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp
EngineLib/src/Scene/World/: BlockData.cpp  BlockData.hpp  BlockRegistry.cpp  BlockRegistry.hpp  BlockVertexData.hpp  Chunk.hpp  ChunkConstraints.hpp  ChunkData.cpp  ChunkData.hpp  ChunkFactory.cpp  ChunkFactory.hpp  ChunkMesh.cpp  ChunkMesh.hpp  ChunkMeshFactory.cpp  ChunkMeshFactory.hpp  ChunkPosition.cpp  ChunkPosition.hpp  ChunkRenderer.cpp  ChunkRenderer.hpp  TerrainGenerator.cpp  TerrainGenerator.hpp  TerrainShape.cpp  TerrainShape.hpp  VoxelVertex.hpp  World.cpp  World.hpp  World.impl.hpp
EngineLib/src/Util/: File.cpp  File.hpp  Log.cpp  Log.hpp  Predefines.hpp  Version.hpp
EngineLib/src/Window/: Window.cpp  Window.hpp
Sandbox/src/: Console.cpp  Console.hpp  SandboxLayer.cpp  SandboxLayer.hpp  SandboxSky.cpp  SandboxSky.hpp  sandbox.cpp
Sandbox/src/Layer/: Cube.cpp  Cube.hpp  DebugCube.cpp  DebugCube.hpp  GUILayer.cpp  GUILayer.hpp  Hitbox.cpp  Hitbox.hpp  LightObject.cpp  LightObject.hpp  SandboxLayer.cpp  SandboxLayer.hpp
ShaderReflectionTest/: Test.glsl  main.cpp
TerrainGenerationTool/src/: TerrainGenerationTool.cpp
TerrainGenerationTool/src/Layer/: GUILayer.cpp  GUILayer.hpp  TerrainGenerationToolLayer.cpp  TerrainGenerationToolLayer.hpp
TestLayer/src/: test.cpp
TestLayer/src/Layer/: GUILayer.cpp  TestLayer.cpp  TestLayer.hpp
assets/Shaders/: BlingPhongFlat.frag.glsl  BlingPhongFlat.vert.glsl  Cube.vert.glsl  Debug.frag.glsl  HitBox.frag.glsl  HitBox.vert.glsl  Light.vert.glsl  Skybox.frag.glsl  Skybox.vert.glsl  Test.frag.glsl  World.frag.glsl  World.vert.glsl  World.vert.glsl.backup  WorldDepth.vert.glsl
assets/Shaders/Sandbox/: BlingPhongDiffuseTextured.frag.glsl  Skybox.vert.glsl  World.frag.glsl  WorldIndirectBuffer.frag.glsl
assets/Shaders/Test/: Test.vert.glsl
scripts/: config.py  copylibs.py
